--- a/Assignment2_BIT216/src/app/home/home.component.html
+++ b/Assignment2_BIT216/src/app/home/home.component.html
@@ -1,1 +1,27 @@
-<h1>Welcome to Covid-19 Tracer</h1>
+<mat-drawer-container class="container">
+    <mat-drawer-content class="pretty">
+        <h1>Welcome to Covid-19 Tracer</h1>
+        <br>
+        <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            <br>
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+            <br>
+            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            <br>
+            It has survived not only five centuries,
+            but also the leap into electronic typesetting,
+            remaining essentially unchanged.
+            <br>
+            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+            <br>
+            and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+
+
+    </mat-drawer-content>
+</mat-drawer-container>
+
+<div class="link">
+    <a href="https://www.worldometers.info/coronavirus/">Click here to check on the latest Covid-19 World Updates</a>
+</div>
