--- a/Assignment2_BIT216/src/app/TestCentreManager/generateTestReport/generateTestReport.component.html
+++ b/Assignment2_BIT216/src/app/TestCentreManager/generateTestReport/generateTestReport.component.html
@@ -1,5 +1,5 @@
 <mat-drawer-container class="container">
-  <mat-drawer color="primary" mode="side" opened>
+  <mat-drawer class="drawer" color="primary" mode="side" opened>
     <button mat-stroked-button color="primary" routerLink="/tcmHome">Home</button>
     <br>
     <button mat-stroked-button color="primary" routerLink="/reg-tc">Register Test Centre</button>
@@ -9,6 +9,8 @@
     <button mat-stroked-button color="primary" routerLink="/manage-stock">Manage Test-Kit Stock</button>
     <br>
     <button mat-stroked-button color="primary" routerLink="/generate-testReport">Generate Test Report</button>
+    <br>
+    <button mat-stroked-button color="accent" (click)="onLogout()" routerLink="/home">Log Out</button>
   </mat-drawer>
 
   <mat-drawer-content>
