--- a/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/newKit/newKit.component.css
+++ b/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/newKit/newKit.component.css
@@ -1,7 +1,7 @@
 .container {
-  background-color: aliceblue;
+  background-color: beige;
   width: auto;
-  height: 80%;
+  height: 85%;
   margin: 10px;
   border: 1px solid #555;
   text-align: center;
@@ -30,4 +30,8 @@
 button{
   width: 100%;
   height: 15%;
+}
+
+.drawer{
+  width: 15%;
 }
