--- a/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/updateKit/updateKit.component.css
+++ b/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/updateKit/updateKit.component.css
@@ -4,9 +4,9 @@ button{
 }
 
 .container {
-  background-color: aliceblue;
+  background-color: beige;
   width: auto;
-  height: 80%;
+  height: 85%;
   margin: 10px;
   border: 1px solid #555;
   text-align: center;
@@ -23,4 +23,8 @@ button{
   color: red;
   font-weight: bold;
   font-size: large;
+}
+
+.drawer{
+  width: 15%;
 }
