--- a/Assignment2_BIT216/src/app/patient/viewTestHistory/viewTestHistory.component.css
+++ b/Assignment2_BIT216/src/app/patient/viewTestHistory/viewTestHistory.component.css
@@ -4,9 +4,9 @@ button {
 }
 
 .container {
-  background-color: aliceblue;
+  background-color: whitesmoke;
   width: auto;
-  height: 80%;
+  height: 85%;
   margin: 10px;
   border: 1px solid #555;
   text-align: center;
@@ -23,4 +23,8 @@ button {
   font-size: 15px;
   width: 20%;
   height: auto;
+}
+
+.drawer{
+  width: 15%;
 }
