--- a/Assignment2_BIT216/src/app/tester/recordNewTest/recordNewTest.component.css
+++ b/Assignment2_BIT216/src/app/tester/recordNewTest/recordNewTest.component.css
@@ -1,7 +1,7 @@
 .container {
   background-color: aliceblue;
   width: auto;
-  height: 80%;
+  height: 85%;
   margin: 10px;
   border: 1px solid #555;
   text-align: center;
@@ -40,4 +40,8 @@
 button {
   width: 100%;
   height: 15%;
+}
+
+.drawer{
+  width: 15%;
 }
