--- a/Assignment2_BIT216/src/app/tester/testerHome.component.html
+++ b/Assignment2_BIT216/src/app/tester/testerHome.component.html
@@ -1,15 +1,33 @@
 <mat-drawer-container class="container">
 
-  <mat-drawer mode="side" opened>
+  <mat-drawer class="drawer" mode="side" opened>
     <button mat-stroked-button color="primary" routerLink="/testerHome">Home</button>
     <br>
     <button mat-stroked-button color="primary" routerLink="/rec-newTest">Record New Test</button>
     <br>
     <button mat-stroked-button color="primary" routerLink="/update-testResult">Update Test Result</button>
+    <br>
+    <button mat-stroked-button color="accent" (click)="onLogout()" routerLink="/home">Log Out</button>
   </mat-drawer>
 
-  <mat-drawer-content>
-    <h2>Welcome Tester!</h2>
+  <mat-drawer-content class="pretty">
+    <h1>Welcome Tester!</h1>
+    <br>
+    <p >
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+      <br>
+      Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+      <br>
+      when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+      <br>
+      It has survived not only five centuries,
+      but also the leap into electronic typesetting,
+      remaining essentially unchanged.
+      <br>
+      It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+      <br>
+      and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+    </p>
 
   </mat-drawer-content>
 
