--- a/Assignment2_BIT216/src/app/users/login/login.component.html
+++ b/Assignment2_BIT216/src/app/users/login/login.component.html
@@ -1,9 +1,26 @@
-<form>
-  <div class="container">
-    <label for="uname"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
-    <button type="submit">Login</button>
-  </div>
-</form>
+<mat-drawer-container class="container">
+
+  <form (submit)="onAddUser(userForm)" #userForm="ngForm">
+
+    <mat-form-field class="username">
+      <input matInput type="text" name="username" ngModel required minlength="3" #username="ngModel"
+        placeholder="Enter username">
+      <mat-error *ngIf="username.invalid">Please enter a username</mat-error>
+    </mat-form-field>
+    <br>
+    <mat-form-field class="password">
+      <input matInput type="text" name="password" ngModel required minlength="3" #password="ngModel"
+        placeholder="Enter a password">
+      <mat-error *ngIf="password.invalid">Please enter a password</mat-error>
+    </mat-form-field>
+    <br>
+    <button mat-flat-button color="primary" class="btnLogin" (click)="onAddLogin()" type="submit">Login</button>
+    <br><br>
+
+    <div class="register">
+      <p>New User?</p>
+      <a href="register">Click here to register</a>
+    </div>
+
+  </form>
+</mat-drawer-container>
