Revised homepages description

--- a/Assignment2_BIT216/src/app/TestCentreManager/tcmHome/tcmHome.component.html
+++ b/Assignment2_BIT216/src/app/TestCentreManager/tcmHome/tcmHome.component.html
@@ -18,19 +18,8 @@
     <h1>Welcome Test Centre Manager!</h1>
     <br>
     <p>
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            From here, you are able to register a test centre, record a new tester, manage the test kit stock, and generate a test report.
             <br>
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-            <br>
-            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-            <br>
-            It has survived not only five centuries,
-            but also the leap into electronic typesetting,
-            remaining essentially unchanged.
-            <br>
-            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-            <br>
-            and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
     </p>
   </mat-drawer-content>
 
