--- a/Assignment2_BIT216/src/app/home/home.component.html
+++ b/Assignment2_BIT216/src/app/home/home.component.html
@@ -3,19 +3,10 @@
         <h1>Welcome to Covid-19 Tracer</h1>
         <br>
         <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            This is a system that allows the health ministry to keep track of COVID-19 tests
             <br>
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+            that have been performed by the various test centres.
             <br>
-            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-            <br>
-            It has survived not only five centuries,
-            but also the leap into electronic typesetting,
-            remaining essentially unchanged.
-            <br>
-            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-            <br>
-            and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
         </p>
 
 
