--- a/Assignment2_BIT216/src/app/patient/patient.component.html
+++ b/Assignment2_BIT216/src/app/patient/patient.component.html
@@ -12,19 +12,8 @@
     <h1>Welcome Patient!</h1>
     <br>
     <p>
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+      From here, you are able to view your own test history.
       <br>
-      Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-      <br>
-      when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-      <br>
-      It has survived not only five centuries,
-      but also the leap into electronic typesetting,
-      remaining essentially unchanged.
-      <br>
-      It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-      <br>
-      and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
     </p>
   </mat-drawer-content>
 
