Some display corrections

--- a/Assignment2_BIT216/src/app/patient/viewTestHistory/viewTestHistory.component.html
+++ b/Assignment2_BIT216/src/app/patient/viewTestHistory/viewTestHistory.component.html
@@ -22,7 +22,7 @@
       </mat-expansion-panel>
     </mat-accordion>
 
-    <p class="info-text mat-body-1" *ngIf="tests.length == 0"> No test has been recorded yet</p>
+    <p class="info-text mat-body-1" *ngIf="tests.length == 0"> No tests has been recorded yet</p>
     <br>
     <button class="btnBack" mat-stroked-button color="accent" routerLink="/patient">Back to main page</button>
 
