--- a/Assignment2_BIT216/src/app/tester/updateTestResult/updateTestResult.component.html
+++ b/Assignment2_BIT216/src/app/tester/updateTestResult/updateTestResult.component.html
@@ -12,7 +12,7 @@
 
   <mat-drawer-content>
 
-    <h3 class="label">List of Test Results:-</h3>
+    <h3 class="label">List of Test Results: </h3>
 
     <!--input class="testIDbox" type="text" name="testID" placeholder="Please enter the TestID"-->
 
@@ -34,7 +34,7 @@
       </mat-expansion-panel>
     </mat-accordion>
 
-    <p class="info-text mat-body-1" *ngIf="tests.length == 0"> No test has been recorded yet</p>
+    <p class="info-text mat-body-1" *ngIf="tests.length == 0"> No tests has been recorded yet</p>
     <br>
     <button class="btnRecord" mat-stroked-button color="accent" routerLink="/rec-newTest">Add New Test</button>
 
